<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linear_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">
            <TextView
                android:id="@+id/TextV1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:textAlignment="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/TextV2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@string/textview2"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
            <EditText
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/bouton1"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bouton2" />

        <LinearLayout
            android:id="@+id/linear_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/TextVimg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/raz_img"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="67"
                android:text="@string/raz" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bouton3" />

        <LinearLayout
            android:id="@+id/linear_son"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/TextVson"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/raz_son"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="67"
                android:text="@string/raz" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_switch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="Off"
                android:textOn="On" />
            <TextView
                android:id="@+id/TextVswith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/switch1"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_rec"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/record" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/stop" />

            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/play" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_save"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


